[tool.poetry]
name = "dcm2png"
version = "0.1.0"
description = "extract png image from dicom"
authors = ["cp949 <codepage949@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pydicom = "^2.3.1"
python-gdcm = "^3.0.21"
imageio = "^2.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
